--- a/assets/styles/style-main.css
+++ b/assets/styles/style-main.css
@@ -36,8 +36,6 @@ html {
 }
 
 body {
-	position: absolute;
-	display: flex;
 	color: var(--text-main-color);
 	width: 100%;
 	height: 100%;
